--- a/web/index.html
+++ b/web/index.html
@@ -65,6 +65,7 @@
       <script src="./static/js/dialogs/default-consent.js"></script>
       <script src="./static/js/dialogs/default-retry.js"></script>
       <script src="./static/js/dialogs/user-picker.js"></script>
+      <script src="./static/js/dialogs/vehicle-picker.js"></script>
 
       <!-- * Pages * -->
       <script src="./static/js/pages/login.js"></script>
@@ -357,7 +358,7 @@
             <div class="row mdl-input-row">
                <i class="material-icons">lock</i>
                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="vehicle-create-active">
-                  <input id="vehicle-create-active" type="checkbox" class="mdl-checkbox__input" checked>
+                  <input id="vehicle-create-active" type="checkbox" class="mdl-checkbox__input">
                   <span class="mdl-checkbox__label" data-intl="vehicle-create-active"></span>
                </label>
             </div>
@@ -643,7 +644,7 @@
          </header>
 
          <!-- Vehicle sub appbar -->
-         <header class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
+         <header id="schedule-create-vehicle-app-bar" class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
 
             <!-- Vehicle appbar info -->
             <div class="flex-horizontal-layout">
