--- a/web/index.html
+++ b/web/index.html
@@ -418,7 +418,7 @@
             <div class="row mdl-input-row">
                <i class="material-icons">lock</i>
                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="vehicle-create-active">
-                  <input id="vehicle-create-active" type="checkbox" class="mdl-checkbox__input">
+                  <input id="vehicle-create-active" type="checkbox" class="mdl-checkbox__input" checked>
                   <span class="mdl-checkbox__label" data-intl="vehicle-create-active"></span>
                </label>
             </div>
