Schedule-Update Pickers done
The user can now:
- Choose a vehicle when booking a new reservation]
- Choose a user when booking a new reservation

--- a/web/index.html
+++ b/web/index.html
@@ -806,7 +806,7 @@
          </header>
 
          <!-- Vehicle sub appbar -->
-         <header class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
+         <header id="schedule-update-vehicle-app-bar" class="app-bar flex-horizontal-layout tinted raised vehicle-info-app-bar">
 
             <!-- Vehicle appbar info -->
             <div class="flex-horizontal-layout">
