Empty list text
- The user will be informed when a list loaded but got 0 results
- Added navigation on drawer
- Remove sensitive user's route that lists all resources

--- a/web/index.html
+++ b/web/index.html
@@ -118,14 +118,14 @@
 
             <!-- * Navigation list * -->
             <div class="drawer-navigation vertical-layout">
-               <button type="button" class="mdl-js-button mdl-js-ripple-effect"><i class="material-icons">people</i><span>Users</span></button>
-               <button type="button" class="mdl-js-button mdl-js-ripple-effect"><i class="material-icons">event</i><span>Schedules</span></button>
-               <button type="button" class="mdl-js-button mdl-js-ripple-effect"><i class="material-icons">directions_car</i><span>Vehicles</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('users')"><i class="material-icons">people</i><span>Users</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('reservations')"><i class="material-icons">event</i><span>Schedules</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('')"><i class="material-icons">directions_car</i><span>Vehicles</span></button>
 
                <div class="horizontal-separator"></div>
 
-               <button type="button" class="mdl-js-button mdl-js-ripple-effect"><i class="material-icons">settings</i><span>Settings</span></button>
-               <button type="button" class="mdl-js-button mdl-js-ripple-effect"><i class="material-icons">info</i><span>About us</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('settings')"><i class="material-icons">settings</i><span>Settings</span></button>
+               <button type="button" class="mdl-js-button mdl-js-ripple-effect" onclick="spa.navigateTo('about-us')"><i class="material-icons">info</i><span>About us</span></button>
             </div>
          </nav>
       </div>
@@ -209,6 +209,7 @@
 
          <!-- Vehicles' cards list -->
          <ul id="vehicles-list" class="list content-before-fab">
+            <span class="empty-list-text box card raised" data-intl="empty-list-text-vehicles"></span>
             <!-- Example of a vehicle card -->
             <!--
             <li data-id="1" class="card box raised">
@@ -583,6 +584,7 @@
 
          <!-- Vehicle's schedules list -->
          <ul id="schedules-list" class="list content-before-fab">
+            <span class="empty-list-text box card raised" data-intl="empty-list-text-schedules"></span>
             <!-- Example of an item -->
             <!--
             <li class="card box raised">
@@ -909,6 +911,7 @@
 
          <!-- Vehicle's schedules list -->
          <ul id="users-list" class="list content-before-fab">
+            <span class="empty-list-text box card raised" data-intl="empty-list-text-users"></span>
             <!-- Example of an item -->
             <!--
             <li class="row card box raised">
@@ -1499,6 +1502,7 @@
 
             <!-- User picker list -->
             <ul class="list" id="user-picker-list">
+               <span class="empty-list-text box card raised" data-intl="empty-list-text-user-picker"></span>
                <!-- User picker row example -->
                <!--
                <li class="row vertical-layout">
@@ -1529,6 +1533,7 @@
 
             <!-- Vehicle picker list -->
             <ul class="list" id="vehicle-picker-list">
+               <span class="empty-list-text box card raised" data-intl="empty-list-text-vehicle-picker"></span>
                <!-- Vehicle picker row example -->
                <!--
                <li class="row">
