Schedule period validation
- Now the create and update schedule forms will validate if the user
entered a valid period (not all cases)
- Fixed dialog dismissing animation
- Fixed time field on update-schedule

--- a/web/index.html
+++ b/web/index.html
@@ -81,6 +81,7 @@
       <script src="./static/js/pages/index.js"></script>
       <script src="./static/js/pages/vehicle-info.js"></script>
       <script src="./static/js/pages/vehicle-update.js"></script>
+      <script src="./static/js/pages/schedule-date-validation.js"></script>
       <script src="./static/js/pages/schedule-create.js"></script>
       <script src="./static/js/pages/schedules.js"></script>
       <script src="./static/js/pages/schedule-info.js"></script>
