MDL util module
- Added a module that helps updating the status of MDL checkboxes and
textfields

--- a/web/index.html
+++ b/web/index.html
@@ -68,6 +68,8 @@
 
       <script src="./static/js/file-encoder/file-encoder.js"></script>
 
+      <script src="./static/js/mdl/mdl-util.js"></script>
+
       <!-- * Dialogs * -->
       <script src="./static/js/dialogs/default-notice.js"></script>
       <script src="./static/js/dialogs/default-consent.js"></script>
