Users List done
The user can now:
- See the list of users

--- a/web/index.html
+++ b/web/index.html
@@ -89,6 +89,7 @@
       <script src="./static/js/pages/schedule-info.js"></script>
       <script src="./static/js/pages/schedule-update.js"></script>
       <script src="./static/js/pages/vehicle-create.js"></script>
+      <script src="./static/js/pages/users.js"></script>
       <script src="./static/js/pages/user-update.js"></script>
       <script src="./static/js/pages/user-create.js"></script>
 
